# dropcoin

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 013c7e48912f_create_tx_and_farming.py  045e32661444_add_cashout_date_and_status.py  0d0370295dd8_.py  407e93bbe08c_make_dates_utc.py  4cc2691f9a31_.py  4cdc6dc68159_make_usernmae_unnecesary_field.py  4ef16a09f8fb_update_for_microservices.py  6756d830931f_referrals.py  6b1b9f691d95_change_hash_to_id.py  7243484a98f0_create_users.py  7bc1d6a9e1d5_add_wallet.py  8ebe7d7b1c8c_rewards.py  8f99ec9023b0_change_id_type_from_int_to_string.py  a78ad2f1de61_add_post_url.py  abfaa3442f3b_create_hashes_state_bets.py  b01b0bd59b6d_twitter_posts.py  ba95fec0eda3_alter_twitter_post_id.py  c00ec0c7bee4_create_users_fixed.py  df2fc4739b2a_.py  e7e880f57eff_make_prev_game_nullable.py  e9299f14f44c_remove_twitter_parameters.py  f77ed6e25140_save_access_token.py
configs/: auth.py  crash.py  db.py  environment.py  rewards.py
deploy/nginx/: Dockerfile  nginx.conf
dev_tools/: Dockerfile  docker-compose.yml
models/: AvailableRewards.py  BaseModel.py  CrashBet.py  CrashHash.py  CrashState.py  Farming.py  GameHistory.py  TwitterPost.py  UserModel.py  UserReward.py  UserTransaction.py
repositories/: UserRepository.py
routers/: auth.py  balance.py  casino.py  crash.py  farming.py  rewards.py  user_settings.py
schemas/: auth.py  balance.py  casino.py  rewards.py  user_settings.py
services/: auth.py  balance.py  crash.py  rewards.py  transactions.py
(+2 files in other folders)
