[tool.poetry]
name = "dropcoin"
version = "0.1.0"
description = ""
authors = ["FourZd <shogo.ryaskov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
authlib = "^1.3.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
